Update content src/site/notes/distribute/Weekly note/Content record folder/2024-01-28-W5.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-28-W5.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-28-W5.md
@@ -12,7 +12,28 @@
 ------------
 ---------
 ----
+# ㅡ 1. 파이썬-부트캠프-언어-미니프로젝트-실무기술
 
+### ㅡ Python
+- [x] [[제너레이터(함수)-타입-yield\|제너레이터(함수)-타입-yield]] / 내용복기 / 업데이트
+- [x] [[이터레이터-iterator타입-이터러블-Iterable특징\|이터레이터-iterator타입-이터러블-Iterable특징]] / 내용복습 업데이트
+- [x] [[for문-구조-range()특징\|for문-구조-range()특징]] / 내용복기 업데이트
+- [x] [[피보나치수열-함수정의\|피보나치수열-함수정의]] / 목차연결
+- [x] [[제너레이터-구조-연습기록\|제너레이터-구조-연습기록]] / 목차연결
+
+
+##### ㅡ
+- [x] 기존 제너레이터 기록 / 복기 / 업데이트 
+	
+- [x] 파이썬 제너레이터
+- [x] 제너레이터 과제 풀이
+	- [x] 1회독 시청/기록
+	- [x] 내용분리/목차연결
+	- [x] 2회독 시청/기록
+	- [x] 내용분리/목차연결
+
+
+-------------
 # ㅡ 3. 금융SW아카데미 정보 구축
 - 금융SW아카데미 정보 구축
 	
