Update content src/site/notes/distribute/Weekly note/Content record folder/2024-01-28-W5.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-28-W5.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-28-W5.md
@@ -33,6 +33,19 @@
 	- [x] 내용분리/목차연결
 
 
+##### ㅡ
+- [x] 데코레이터 기존 기록 복기 / 업데이트
+	- [x] [[데코레이터-예시코드\|데코레이터-예시코드]] 
+	- [x] [[데코레이터-구문-표현식\|데코레이터-구문-표현식]]
+	
+- [x] 파이썬 데코레이터 살펴보기 / 1회독 시청-기록
+	- [x] 1회독 기록 / 내용복습 / 내용분리 목차연결
+	- [x] 내용분리/ 목차연결
+	
+ - [x] 데코레이터 과제 / 1회독 시청
+	 - [x] 2회독 시청 풀이
+
+
 -------------
 # ㅡ 3. 금융SW아카데미 정보 구축
 - 금융SW아카데미 정보 구축
