Update content src/site/notes/distribute/Weekly note/Content record folder/2023-12-11-W2.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2023-12-11-W2.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2023-12-11-W2.md
@@ -27,7 +27,6 @@
 
 
 ### ㅡ CSS
-- css 일요일 / 월요일 / 수요일 / 목요일
 	
 - [x] gtp 내용정리 
 - [x] [[CSS-border-radius-테두리속성\|CSS-border-radius-테두리속성]]
@@ -37,6 +36,9 @@
 - [x] [[크롬-CSS확인방법-환경설정-왓폰트\|크롬-CSS확인방법-환경설정-왓폰트]] / 목차연결
 - [x] [[메뉴스타일-햄버거아이콘-토글기능-반응형\|메뉴스타일-햄버거아이콘-토글기능-반응형]]  / 키워드 참고노트 / 목차연결 필요
 
+
+### ㅡ JS
+- [x] [[이벤트핸들러-용어-콜백함수\|이벤트핸들러-용어-콜백함수]] / 목차연결
 
 
 ---
