Update content src/site/notes/distribute/Weekly note/Content record folder/2024-01-28-W5.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-28-W5.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-28-W5.md
@@ -128,3 +128,16 @@
 ##### ㅡ
 - [x] [[실행시간-런타임시간-실행환경-의미\|실행시간-런타임시간-실행환경-의미]] / 내용복기  업데이트
 
+---
+---
+---
+###  ㅡ 단순 명확화 행동 2번
+- 지난 기록들 복기 > 배포 
+- 포맷 진행  + 자료 정리
+
+##### ㅡ
+- [ ] gpts 기능활용 학습 중.
+- [[인생선배-멘토-목차#ㅡ 커리어해커 알렉스\|인생선배-멘토-목차#ㅡ 커리어해커 알렉스]]
+	
+- [x] 영어원서 번역 GPTs 생성
+- [x] 웹 개발 전문가 GPTs 생성
