Update content src/site/notes/distribute/Weekly note/Content record folder/2024-02-04-W1.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-02-04-W1.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-02-04-W1.md
@@ -11,6 +11,14 @@
 - ![SmartSelect_20240206_111348_Time It.jpg|300](/img/user/%EC%B2%A8%EB%B6%80%ED%8C%8C%EC%9D%BC/SmartSelect_20240206_111348_Time%20It.jpg)
 
 -------------------------------
+------
+-----
+# ㅡ 1. 파이썬-부트캠프-언어-미니프로젝트-실무기술
 
 
 
+##### ㅡ
+- 고급 파이썬 모듈
+섹션 학습 중.
+ㅡ
+- [x] [[고급자료구조-딕셔너리\|고급자료구조-딕셔너리]] / 내용정리 / 목차연결
