Update content src/site/notes/distribute/Weekly note/Content record folder/2024-02-04-W1.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-02-04-W1.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-02-04-W1.md
@@ -22,3 +22,16 @@
 섹션 학습 중.
 ㅡ
 - [x] [[고급자료구조-딕셔너리\|고급자료구조-딕셔너리]] / 내용정리 / 목차연결
+
+
+
+----
+###  ㅡ 단순 명확화 행동 1번
+- 핵심목표 우선순위 리스트 / 2024 리스트로 업데이트 진행
+- 캠프 자료/영상 저장/기록
+- 금융SW아카데미 정보 구축
+
+
+##### ㅡ
+- [x] 주말 아카데미에서 받은 문자/메일 확인 
+	- [x] 카드 확인 
