Update content src/site/notes/distribute/Weekly note/Content record folder/2023-12-11-W2.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2023-12-11-W2.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2023-12-11-W2.md
@@ -47,3 +47,15 @@
 
 ### ㅡ Python
 - [x] [[가상환경-주피터노트북-커널-연결\|가상환경-주피터노트북-커널-연결]] / 목차연결
+- [x] [[객체특징-Mutable얕은복사-Immutable깊은복사-메모리주소\|객체특징-Mutable얕은복사-Immutable깊은복사-메모리주소]] / 내용 업데이트
+- [x] [[탈출문자-이스케이프-escape\|탈출문자-이스케이프-escape]] / 목차연결
+- [x] [[정적언어-동적언어-런타임안정성\|정적언어-동적언어-런타임안정성]] / 내용 복기-업데이트
+- [x] [[파이썬-변수의미-명명규칙\|파이썬-변수의미-명명규칙]] / 내용업데이트
+- [x] [[문자열-메서드-함수\|문자열-메서드-함수]] / 내용업데이트
+- [x] [[깃허브-포크-기능용어\|깃허브-포크-기능용어]] / 목차연결
+- [x] [[cmd-명령프롬프트-터미널-콘솔-프로그램실행원리\|cmd-명령프롬프트-터미널-콘솔-프로그램실행원리]] / 내용복습/업데이트
+- [x] [[파일경로-절대경로-상대경로-기호표현\|파일경로-절대경로-상대경로-기호표현]] / 내용복습 / 업데이트
+- [x] [[파이썬(python) - 아나콘다(Anaconda)란-설치\|파이썬(python) - 아나콘다(Anaconda)란-설치]] / 밑출 참고노트화 / 
+- [x] [[아나콘다-cmd-명령코드\|아나콘다-cmd-명령코드]] / 내용추가
+- [x] [[노트북-셀-cell-이해\|노트북-셀-cell-이해]] / 목차연결
+- [x] [[노트북-단축키-기능\|노트북-단축키-기능]] / 목차연결
