Update content src/site/notes/distribute/Weekly note/Content record folder/2023-12-11-W2.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2023-12-11-W2.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2023-12-11-W2.md
@@ -59,3 +59,6 @@
 - [x] [[아나콘다-cmd-명령코드\|아나콘다-cmd-명령코드]] / 내용추가
 - [x] [[노트북-셀-cell-이해\|노트북-셀-cell-이해]] / 목차연결
 - [x] [[노트북-단축키-기능\|노트북-단축키-기능]] / 목차연결
+- [x] [[2강-깃코드-스테이징-레포지토리-커밋-용어이해\|2강-깃코드-스테이징-레포지토리-커밋-용어이해]] / 키워드-참고노트화 ㅇ 
+- [x] [[리스트자료형-함수\|리스트자료형-함수]] / 키워드 참고노트화 / 목차연결 
+- [x] [[파이썬-개발환경-프로그램\|파이썬-개발환경-프로그램]] / 키워드 참고노트화 / 목차연결
