Update content src/site/notes/distribute/Weekly note/Content record folder/2024-01-21-W4.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-21-W4.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-21-W4.md
@@ -38,7 +38,7 @@
 - [x] [[인코딩-디코딩-유니코드\|인코딩-디코딩-유니코드]] / 내용복기
 - [x] [[파싱-용어-데이터분석과정\|파싱-용어-데이터분석과정]] / 목차연결
 - [x] [[API-용어-데이터교환코드\|API-용어-데이터교환코드]] / 목차연결
-
+- [x] [[코드작성방식-모듈화-함수분할\|코드작성방식-모듈화-함수분할]] / 목차연결
 
 ##### ㅡ
 진도강의
