Update content src/site/notes/distribute/Weekly note/Content record folder/2024-01-07-W2.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-07-W2.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-07-W2.md
@@ -34,7 +34,7 @@
 - [x] [[JVM-용어-프로그램-가상공간\|JVM-용어-프로그램-가상공간]] 목차연결
 - [x] [[구성요소기반-아키텍처-용어\|구성요소기반-아키텍처-용어]] / 목차연결
 - [x] [[실행시간-런타임시간-실행환경-의미\|실행시간-런타임시간-실행환경-의미]] / 목차연결
-
+- [x] [[예외처리구문-사용시기-이유\|예외처리구문-사용시기-이유]] / 목차연결
 
 ------
 ---
