Update content src/site/notes/distribute/Weekly note/Content record folder/2024-02-04-W1.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-02-04-W1.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-02-04-W1.md
@@ -13,6 +13,11 @@
 -------------------------------
 ------
 -----
+
+##### ㅡ
+- [x] [[깃허브-토큰-암호키\|깃허브-토큰-암호키]] / 목차연결
+
+---
 # ㅡ 1. 파이썬-부트캠프-언어-미니프로젝트-실무기술
 
 
