--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-02-11-W2.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-02-11-W2.md
@@ -13,5 +13,11 @@
 
 -------------------------------
 
+# ㅡ 1. 파이썬-부트캠프-언어-미니프로젝트-실무기술
 
+### ㅡ Python
 
+##### ㅡ 
+**@ 섹션 20**
+	
+- [x] [[해시테이블-데이터구조\|해시테이블-데이터구조]] / 목차연결
