Update content src/site/notes/distribute/Weekly note/Content record folder/2024-02-11-W2.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-02-11-W2.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-02-11-W2.md
@@ -16,9 +16,11 @@
 # ㅡ 1. 파이썬-부트캠프-언어-미니프로젝트-실무기술
 
 ### ㅡ Python
+- [x] [[해시테이블-데이터구조\|해시테이블-데이터구조]] / 목차연결
+- [x] [[집합-세트-set-메서드\|집합-세트-set-메서드]] / 목차연결
+- [x] [[05-5 내장함수\|05-5 내장함수]] / 내용 업데이트 / 복기
+
 
 ##### ㅡ 
 **@ 섹션 20**
 	
-- [x] [[해시테이블-데이터구조\|해시테이블-데이터구조]] / 목차연결
-- [x] [[집합-세트-set-메서드\|집합-세트-set-메서드]] / 목차연결
