Update content src/site/notes/distribute/Weekly note/Content record folder/2024-02-11-W2.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-02-11-W2.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-02-11-W2.md
@@ -19,8 +19,12 @@
 - [x] [[해시테이블-데이터구조\|해시테이블-데이터구조]] / 목차연결
 - [x] [[집합-세트-set-메서드\|집합-세트-set-메서드]] / 목차연결
 - [x] [[05-5 내장함수\|05-5 내장함수]] / 내용 업데이트 / 복기
-
+- [x] [[얕은복사-추가내용\|얕은복사-추가내용]] / 목차연결
+- [x] [[객체특징-가변성(Mutability)-불변성(Immutability) 1\|객체특징-가변성(Mutability)-불변성(Immutability) 1]] / 목차연결
+- [x] [[참조복사상황-객체동일-참조-공유\|참조복사상황-객체동일-참조-공유]] / 목차 기록
+- [x] [[깊은복사상황-deep copy\|깊은복사상황-deep copy]] / 목차기록
+- [x] [[얕은복사상황-작동방식-new객체-값공유\|얕은복사상황-작동방식-new객체-값공유]] /목차기록
+- [x] [[진법-진수-변환\|진법-진수-변환]] / 대략적 기록 ㅇ / 밑줄요약 ㅇ / 내용분리-목차연결 필요
 
 ##### ㅡ 
-**@ 섹션 20**
-	
+- [x] **@ 섹션 20 고급 파이썬 객체 및 데이터 구조 1회독**
