Update content src/site/notes/distribute/Weekly note/Content record folder/2024-02-11-W2.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-02-11-W2.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-02-11-W2.md
@@ -28,3 +28,18 @@
 
 ##### ㅡ 
 - [x] **@ 섹션 20 고급 파이썬 객체 및 데이터 구조 1회독**
+
+---
+# ㅡ 2. 신한-금융SW아카데미
+- 금융SW아카데미 정보 구축
+- 면접준비 구축
+
+
+##### ㅡ
+- [[신한sw아카데미-면접준비\|신한sw아카데미-면접준비]]
+	-지원서 기반 면접 대본 작성
+	-기존 기록들 연결시키면서
+ㅡ
+- [ ] 옵시디언 블로그 내용정리 / 배포
+	- [x] 깃허브 배포
+	- [x] 옵시디언-제텔카스텐 / 배포
