Update content src/site/notes/distribute/Weekly note/Content record folder/2024-02-04-W1.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-02-04-W1.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-02-04-W1.md
@@ -30,6 +30,24 @@
 - [x] [[고급자료구조-딕셔너리\|고급자료구조-딕셔너리]] / 내용정리 / 목차연결
 
 
+----
+# ㅡ 3. 프론트엔드 개발역량-React
+
+### ㅡ JS
+- [x] 4. 2-1. Hello World / 1회독
+- [x] 6. 2-2. 변수와 상수 / 1회독
+- [x] 2-3. 자료형과 형 변환  / 1회독
+- [x] 2-4. 연산자 / 1회독
+- [x] 2-5. 조건문 / 1회독
+- [x] 2-6. 함수 / 1회독
+- [x] 2-7. 함수 표현식과 화살표 함수 / 1회독
+- [x] 2-8. 콜백함수 
+- [x] 2-9. 객체
+- [x] 2-10. 배열
+- [x] 2-11. 반복문
+ㅡ
+- [x] [[JS-비동기적-처리-상황\|JS-비동기적-처리-상황]] / 복기 / 목차연결
+
 
 ----
 ###  ㅡ 단순 명확화 행동 1번
