Update content src/site/notes/distribute/Weekly note/Content record folder/2024-01-14-W3.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-14-W3.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-14-W3.md
@@ -24,7 +24,7 @@
 ### ㅡ Python
 - [x] [[프로그램단위-용어-모듈-컴포넌트\|프로그램단위-용어-모듈-컴포넌트]] / 목차연결
 - [x] [[규칙-강제-코드블록-인터페이스-용어\|규칙-강제-코드블록-인터페이스-용어]] / 목차연결
-
+- [x] [[컴퓨터-전반적인-용어정리\|컴퓨터-전반적인-용어정리]] / 목차연결
 
 
 ------
