Update content src/site/notes/distribute/Weekly note/Content record folder/2024-01-07-W2.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-07-W2.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-07-W2.md
@@ -36,6 +36,7 @@
 - [x] [[실행시간-런타임시간-실행환경-의미\|실행시간-런타임시간-실행환경-의미]] / 목차연결
 - [x] [[예외처리구문-사용시기-이유\|예외처리구문-사용시기-이유]] / 목차연결
 - [x] [[코드형변환과정-컴파일-인터프리터-바이트코드-기계어\|코드형변환과정-컴파일-인터프리터-바이트코드-기계어]] / 목차연결
+- [x] [[cmd-명령프롬프트-터미널-콘솔-프로그램실행원리\|cmd-명령프롬프트-터미널-콘솔-프로그램실행원리]] / 내용복습 / 업데이트
 
 ------
 ---
