Update content src/site/notes/distribute/Weekly note/Content record folder/2024-01-07-W2.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-01-07-W2.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-01-07-W2.md
@@ -37,6 +37,7 @@
 - [x] [[예외처리구문-사용시기-이유\|예외처리구문-사용시기-이유]] / 목차연결
 - [x] [[코드형변환과정-컴파일-인터프리터-바이트코드-기계어\|코드형변환과정-컴파일-인터프리터-바이트코드-기계어]] / 목차연결
 - [x] [[cmd-명령프롬프트-터미널-콘솔-프로그램실행원리\|cmd-명령프롬프트-터미널-콘솔-프로그램실행원리]] / 내용복습 / 업데이트
+- [x] [[정적언어-동적언어-런타임안정성\|정적언어-동적언어-런타임안정성]] / 내용업데이트
 - [ ] [[VS-폴더우클릭-바로실행-추가설정\|VS-폴더우클릭-바로실행-추가설정]] / 대략적 이해 기록 ㅇ
 - [ ] [[VS코드-설치-한국어팩-단축키설정\|VS코드-설치-한국어팩-단축키설정]] / 대략적 이해 기록 ㅇ
 
