--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-02-25-W4.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-02-25-W4.md
@@ -14,3 +14,12 @@
 
 
 ------------
+# ㅡ 간단 데일리 기록 =>
+
+##### ㅡ
+- [[배움-회독 시스템-목차\|배움-회독 시스템-목차]] 
+	- [x] [[VS코드-목차\|VS코드-목차]] / 전체적인 내용 수정
+	- [x] 자바 프로그래밍 언어  / 대략적 브레인 구축
+	
+- 연결기록 : [[2024년-핵심목표-우선순위-명확화 리스트#ㅡ 김영한 멘토-자바\|2024년-핵심목표-우선순위-명확화 리스트#ㅡ 김영한 멘토-자바#ㅡ1.]]
+
