Update content src/site/notes/distribute/Weekly note/Content record folder/2024-02-04-W1.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-02-04-W1.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-02-04-W1.md
@@ -23,8 +23,13 @@
 
 
 ##### ㅡ 
+- [x] 지난 주 기록 복기 / 마저 채우기
+	- [x] 제너레이터
+	- [x] 데코레이터
+ㅡ
 - [x] [[라우팅-라우트-매커니즘-용어\|라우팅-라우트-매커니즘-용어]] / 목차연결
-
+- [x] [[Flask데코레이터-코드\|Flask데코레이터-코드]] / 목차연결
+- [x] [[플라스크-데코레이터-작동원리-이해\|플라스크-데코레이터-작동원리-이해]] / 목차연결
 ##### ㅡ
 - 고급 파이썬 모듈
 섹션 학습 중.
