Update content src/site/notes/distribute/Weekly note/Content record folder/2024-02-25-W4.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-02-25-W4.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-02-25-W4.md
@@ -23,3 +23,11 @@
 	
 - 연결기록 : [[2024년-핵심목표-우선순위-명확화 리스트#ㅡ 김영한 멘토-자바\|2024년-핵심목표-우선순위-명확화 리스트#ㅡ 김영한 멘토-자바#ㅡ1.]]
 
+
+----
+----
+---
+# ㅡ 3. 깃/깃허브
+
+### ㅡ Git-Hub
+- [x] [[컴퓨터-전반적인-용어정리\|컴퓨터-전반적인-용어정리]] / 내용복기 / 업데이트
