Update content src/site/notes/distribute/Weekly note/Content record folder/2024-02-25-W4.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-02-25-W4.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-02-25-W4.md
@@ -23,6 +23,17 @@
 	
 - 연결기록 : [[2024년-핵심목표-우선순위-명확화 리스트#ㅡ 김영한 멘토-자바\|2024년-핵심목표-우선순위-명확화 리스트#ㅡ 김영한 멘토-자바#ㅡ1.]]
 
+##### ㅡ
+- 아카데미 입과하기 전 미뤄둔 핸드폰 구매 / 정리
+	
+- [x] 구매를 위한 정보정리-구축
+	- [[핸드폰-구매전-정보기록\|핸드폰-구매전-정보기록]]
+	- [[핸드폰-변경방법\|핸드폰-변경방법]]
+	- [[카페-정보기록\|카페-정보기록]]
+- [x] 최종 구매
+	- [[핸드폰구매-최종과정기록\|핸드폰구매-최종과정기록]]
+	-기록을 해놔야 내가 보낸 시간들이 추후 내 인생 경험치가 된다.
+
 
 ----
 ----
