Update content src/site/notes/distribute/Weekly note/Content record folder/2024-02-25-W4.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-02-25-W4.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-02-25-W4.md
@@ -41,4 +41,19 @@
 # ㅡ 3. 깃/깃허브
 
 ### ㅡ Git-Hub
+##### ㅡ 
+- [x] 깃허브 목차/브레인 구축
+	
+##### ㅡ
+- [x] 1강 1회독 
+- [x] 2강 1회독
+- [x] 3강 1회독
+- [x] 4강 1회독 / 2분22초
+- [x] 5강 1회독 / 3분06초
+- [x] 6강 1회독 / 4분08초
+- [x] 퀴즈풀이1
+	
+##### ㅡ
 - [x] [[컴퓨터-전반적인-용어정리\|컴퓨터-전반적인-용어정리]] / 내용복기 / 업데이트
+
+
