--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-02-25-W4.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-02-25-W4.md
@@ -38,6 +38,25 @@
 ----
 ----
 ---
+# ㅡ 1. 프론트엔드 개발역량-React
+
+### ㅡ 섹션4 node.js
+27. 4-1. React.js의 기본 환경 Node.js
+- [x] 1회독 대략적 시청
+	- [x] 1회독 기록-복습-내용분리-목차연결
+
+28. 4-2. Node.js & VsCode 설치 및 환경 설정
+- [x] 1회독 대략적 시청
+	- [x] 1회독 기록-복습-내용분리-목차연결
+
+
+29. 4-3. Node.js Helloworld & Common JS 모듈 시스템
+- [x] 1회독 대략적 시청
+	- [x] 1회독 기록-복습-내용분리-목차연결
+	- [x] 2회독 진행
+
+
+----------------
 # ㅡ 3. 깃/깃허브
 
 ### ㅡ Git-Hub
