Update content src/site/notes/distribute/Weekly note/Content record folder/2024-02-25-W4.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-02-25-W4.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-02-25-W4.md
@@ -40,6 +40,21 @@
 ---
 # ㅡ 1. 프론트엔드 개발역량-React
 
+### ㅡ 섹션 2 JS
+ㅡ
+- 4. 2-1. Hello World
+	- [x] 2회독 - 시청 -기록 - 내용분리/목차연결
+- 6. 2-2. 변수와 상수
+	- [x] 2회독 - 시청 -기록 - 내용분리/목차연결
+- 7. 2-3. 자료형과 형 변환
+	- [x] 2회독 - 시청 -기록 - 내용분리/목차연결
+- 8. 2-4. 연산자
+	- [x] 2회독 - 시청 -기록 - 내용분리/목차연결
+1. 2-5. 조건문
+	- [x] 2회독 - 시청 -기록 - 내용분리/목차연결
+1. 2-6. 함수
+	- [x] 2회독 - 시청 -기록 - 내용분리/목차연결
+
 ### ㅡ 섹션4 node.js
 27. 4-1. React.js의 기본 환경 Node.js
 - [x] 1회독 대략적 시청
