Update content src/site/notes/distribute/Weekly note/Content record folder/2024-02-25-W4.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-02-25-W4.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-02-25-W4.md
@@ -70,7 +70,19 @@
 	- [x] 1회독 기록-복습-내용분리-목차연결
 	- [x] 2회독 진행
 
+---
+---
+# ㅡ 2. 신한-금융SW아카데미
 
+##### ㅡ
+- [x] 아카데미 문자 내용 확인
+- [x] 메일확인
+- [x] 내용정리
+	- [[신한-금융SW아카데미-목차#ㅡ 아카데미 합격 이후 문자/메일 내용\|신한-금융SW아카데미-목차#ㅡ 아카데미 합격 이후 문자/메일 내용]]
+
+
+
+----
 ----------------
 # ㅡ 3. 깃/깃허브
 
