Update content src/site/notes/distribute/Weekly note/Content record folder/2024-02-25-W4.md

--- a/src/site/notes/distribute/Weekly note/Content record folder/2024-02-25-W4.md
+++ b/src/site/notes/distribute/Weekly note/Content record folder/2024-02-25-W4.md
@@ -35,6 +35,17 @@
 	-기록을 해놔야 내가 보낸 시간들이 추후 내 인생 경험치가 된다.
 
 
+##### ㅡ
+아카데미 입과 전 미뤄둔 것들 진행 > 처리.
+	
+- [[IT정보-기기-목차#ㅡ 패드\|IT정보-기기-목차#ㅡ 패드]]
+	- [ ] 패드 / 필름 구매
+		- [x] 정보구축
+	
+- [x] 가방 구매
+	- [x] 정보 구축
+- [x] 키보드 키스킨 구매
+
 ----
 ----
 ---
